--- a/index.html
+++ b/index.html
@@ -173,90 +173,70 @@
     <div class="section" id="section1">
         <canvas class="granim-canvas" id="granim-canvas-rooftop"></canvas>
         <div class="poem-container">
-            <h2 class="poem-title">Rooftop</h2>
+            <h2 class="poem-title">L'art d'agir et pensé comme les 'self-made millionnaires'</h2>
             <p class="poem-text">
-                <span class="poem-line">Le soir descend, caresse de velours,</span>
-                <span class="poem-line">Sur les toits de la ville qui s'endort.</span>
-                <span class="poem-line">Le ciel s'embrase en ultimes décors,</span>
-                <span class="poem-line">Et le temps suspend son rapide cours.</span>
-                <br>
-                <span class="poem-line">Dans ma main, une coupe au frais contour,</span>
-                <span class="poem-line">Où danse un cocktail, délicat trésor.</span>
-                <span class="poem-line">Le soleil mourant nous offre son or,</span>
-                <span class="poem-line">Fin d'un chapitre, fin d'un simple jour.</span>
-                <br>
-                <span class="poem-line">Nul besoin de mots, le silence est roi,</span>
-                <span class="poem-line">Seul le murmure du vent sur le toit</span>
-                <span class="poem-line">Accompagne ce spectacle divin.</span>
-                <br>
-                <span class="poem-line">Ce moment parfait, gravé dans ma mémoire,</span>
-                <span class="poem-line">Est un refuge contre le désespoir,</span>
-                <span class="poem-line">Une promesse d'un plus doux lendemain.</span>
-            </p>
+                    <span class="poem-line">Oh douce course vers le succès de cette vie</span>
+                    <span class="poem-line">Permet-moi de réussir ma vie pour vivre une vie digne</span>
+                    <span class="poem-line">Je marche chaque jour dans la quette du profit solitaire</span>
+                    <span class="poem-line">Pour mieux vivre ou pour mieux aider mon prochain</span>
+                    <span class="poem-line">Cette chose que les gens appellent argent sera ma salvation</span>
+                    <span class="poem-line">Vivre pour l'argent ou mourir pour l'argent tels est la question</span>
+                    <span class="poem-line">Je fais le choix de vivre cette vie dans sa splendeur équitable</span>
+                    <span class="poem-line">Sans mon préjudice et sans des compromis notoires</span>
+                    <span class="poem-line">Pourvu que je vive cette vie honorable et pleine de douceurs</span>
+                    <span class="poem-line">Donc je reste ce convaincu self-made millionnaire dans toutes sa splendeur.</span>
+                </p>
+            </div>
         </div>
-    </div>
 
     <div class="section" id="section2">
         <canvas class="granim-canvas" id="granim-canvas-scroll"></canvas>
         <div class="poem-container">
-            <h2 class="poem-title">Scroll Infini</h2>
+            <h2 class="poem-title">La question de choisir ou ne pas choisir d'être bête et stupide</h2>
             <p class="poem-text">
-                <span class="poem-line">La lune est haute, la chambre est noire,</span>
-                <span class="poem-line">Mon lit m'accueille pour la nuit,</span>
-                <span class="poem-line">Mais sous mes doigts, la même histoire,</span>
-                <span class="poem-line">Un flot d'images qui me fuit.</span>
-                <span class="poem-line">Je cherche en vain le réconfort,</span>
-                <span class="poem-line">Dans ce défilé sans effort,</span>
-                <span class="poem-line">Qui vole mon repos si précieux,</span>
-                <span class="poem-line"><i>Je vois ma fatigue et la méprise.</i></span>
-                <br>
-                <span class="poem-line">Il faudrait juste y croire,</span>
-                <span class="poem-line">Éteindre cette lueur qui luit,</span>
-                <span class="poem-line">Retrouver le fil de mon histoire,</span>
-                <span class="poem-line">Avant que l'aube ne soit ici.</span>
-                <span class="poem-line">Mais l'écran froid est le plus fort,</span>
-                <span class="poem-line">Il me maintient dans son port,</span>
-                <span class="poem-line">Sous son flot vain et captieux,</span>
-                <span class="poem-line"><i>Prince, mon esprit est à l'agonie,</i></span>
-                <span class="poem-line"><i>Prisonnier de cette douce emprise.</i></span>
-                <span class="poem-line"><i>Face à cette fausse cérémonie,</i></span>
-                <span class="poem-line"><i>Je vois ma fatigue et la méprise.</i></span>
-            </p>
+                    <span class="poem-line">La sottise est un défaut et je le sais</span>
+                    <span class="poem-line">Beaucoup de gens souffrent de ce maux humain</span>
+                    <span class="poem-line">Certes l'introspection et l'analyse de son soi-intérieur</span>
+                    <span class="poem-line">Est peut-être la solution, donc lecteur lis et apprend.</span>
+                </p>
+            </div>
         </div>
-    </div>
     
     <div class="section" id="section3">
         <canvas class="granim-canvas" id="granim-canvas-battery"></canvas>
         <div class="poem-container">
-            <h2 class="poem-title">Batterie Faible</h2>
+            <h2 class="poem-title">La beauté constante du succès dans ce monde</h2>
             <p class="poem-text">
-                <span class="poem-line"><span class="acrostiche-letter">B</span>ientôt, le noir total, le grand vide.</span>
-                <span class="poem-line"><span class="acrostiche-letter">A</span>ngoisse pure, mon cœur devient aride.</span>
-                <span class="poem-line"><span class="acrostiche-letter">T</span>out s'effacera, les plans, les contacts.</span>
-                <span class="poem-line"><span class="acrostiche-letter">T</span>el un fil fragile, le lien se rétracte.</span>
-                <span class="poem-line"><span class="acrostiche-letter">E</span>ncore un pourcent, une dernière chance.</span>
-                <span class="poem-line"><span class="acrostiche-letter">R</span>etrouver le courant, rompre le silence.</span>
-                <span class="poem-line"><span class="acrostiche-letter">I</span>solé du monde, une peur si vive.</span>
-                <span class="poem-line"><span class="acrostiche-letter">E</span>st-ce que quelqu'un près de moi arrive ?</span>
-            </p>
+                    <span class="poem-line">Oh très chère "Succès" ton combat pour t'obtenir est long</span>
+                    <span class="poem-line">Combien ont faillis à la tâche et tentant de t'approcher</span>
+                    <span class="poem-line">Combien ont perdus espoirs de te connaitre à cause des déconvenues</span>
+                    <span class="poem-line">Dans cette vie je ne suis qu'un passeur solitaire et pleins de questionnements</span>
+                    <span class="poem-line">Permet-moi de te connaitre dans de bonnes conditions</span>
+                    <span class="poem-line">Permet-moi de t'apprécier à t'as juste valeurs honorable</span>
+                    <span class="poem-line">Je fais les causes chaque jour pour vivre cette vie de succès</span>
+                    <span class="poem-line">Je fais les choses nécessaires à une élévation de vie de succès</span>
+                    <span class="poem-line">Mais dans le bon état d'esprit et dans les bonnes conditions</span>
+                    <span class="poem-line">Et toutes mes causes ne sont produites que pour la beauté constante du succès dans ce monde.</span>
+                </p>
+            </div>
         </div>
-    </div>
 
     <div class="section" id="section4">
         <canvas class="granim-canvas" id="granim-canvas-coffee"></canvas>
         <div class="poem-container">
-            <h2 class="poem-title">Slow Coffee</h2>
+            <h2 class="poem-title">Vivre joyeux comme si il n'y'avait pas de lendemain</h2>
             <p class="poem-text">
-                <span class="poem-line">Le matin se lève à peine. Dans le silence de la cuisine, le rituel commence. Le sac de grains, ouvert, libère un parfum de terre et de promesse.</span>
-                <span class="poem-line">Je pèse les grains. Précision. C'est une cérémonie, pas une corvée.</span>
-                <span class="poem-line">Le moulin grince, une musique grave et rassurante qui brise le sommeil. La poudre obtenue est une poussière sombre et riche, la matière première du réveil.</span>
-                <span class="poem-line">L'eau frémit, elle n'ose pas bouillir. Juste à la bonne température, elle attend.</span>
-                <span class="poem-line">La verser est une danse. Lentement, en cercles concentriques sur la mouture dans le filtre. La première coulée fait gonfler le café, il respire, il s'éveille. Une odeur profonde monte, chocolatée, presque florale.</span>
-                <span class="poem-line">Goutte à goutte, le liquide noir et précieux se forme dans la carafe. C'est la patience récompensée, l'art de ne pas brusquer les choses.</span>
-                <span class="poem-line">Ce n'est pas juste du café. C'est le temps que l'on s'accorde, la première victoire douce de la journée.</span>
-            </p>
+                    <span class="poem-line">J'ai fait le choix de vivre avec une joie constante mon chère</span>
+                    <span class="poem-line">Même malgré les troubles, les déconvenues et les tests de cette vie</span>
+                    <span class="poem-line">Car je sais où ce monde finira et comment il s'achèvera</span>
+                    <span class="poem-line">J'ai fait le choix de comptabilisé le maximum de joies pour ne rien n'oublié</span>
+                    <span class="poem-line">Ma mémoire restera à jamais marqué par ces souvenirs heureux</span>
+                    <span class="poem-line">Acquis dans le bonheur comme dans la douleur malgré tout</span>
+                    <span class="poem-line">Donc vivre joyeux comme si il n'y'avait pas de lendemain tels est ma philosophie & doctrine</span>
+                    <span class="poem-line">Et tels est mon humble chemin et mon glorieux destin.</span>
+                </p>
+            </div>
         </div>
-    </div>
 
     <div class="section" id="section-final">
         <div class="footer-content">
@@ -349,22 +329,22 @@ $(document).ready(function() {
     // Rooftop (Sunset)
     new Granim({
         element: '#granim-canvas-rooftop', direction: 'diagonal', isPausedWhenNotInView: true,
-        states: { "default-state": { gradients: [['#ff8c52', '#f9a8d4'], ['#a855f7', '#ec4899']], transitionSpeed: 7000 }}
+        states: { "default-state": { gradients: [['#A1FFCE', '#FAFFD1'], ['#FCE38A', '#F38181']], transitionSpeed: 7000 }}
     });
     // Scroll (Digital Night)
     new Granim({
         element: '#granim-canvas-scroll', direction: 'radial', isPausedWhenNotInView: true,
-        states: { "default-state": { gradients: [['#0f172a', '#1e293b'], ['#3b82f6', '#020617']], transitionSpeed: 6000 }}
+        states: { "default-state": { gradients: [['#89F7FE', '#66A6FF'], ['#FDD835', '#FFF176']], transitionSpeed: 6000 }}
     });
     // Battery (Anxiety)
     new Granim({
         element: '#granim-canvas-battery', direction: 'left-right', isPausedWhenNotInView: true,
-        states: { "default-state": { gradients: [['#4b5563', '#1f2937'], ['#374151', '#111827']], transitionSpeed: 2000 }}
+        states: { "default-state": { gradients: [['#FFD700', '#FFA07A'], ['#ADFF2F', '#7CFC00']], transitionSpeed: 2000 }}
     });
     // Coffee (Morning)
     new Granim({
         element: '#granim-canvas-coffee', direction: 'diagonal', isPausedWhenNotInView: true,
-        states: { "default-state": { gradients: [['#d2c4b5', '#a1887f'], ['#795548', '#eaddd7']], transitionSpeed: 8000 }}
+        states: { "default-state": { gradients: [['#EE9CA7', '#FFDDE1'], ['#C33764', '#1D2671']], transitionSpeed: 8000 }}
     });
 
     // --- 4. INITIALISATION DE THREE.JS ---
